added features and chat pages

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,2 +1,12 @@
-<h1><%= title %></h1>
-<p>Welcome to <%= title %></p>
+<% if (currentUser) { %>
+
+    <a href="/user/<%=currentUser._id%>/edit"> Edit Profile </a>
+    <a href="/logout"> Log Out </a>
+    <br />
+
+  <% } else { %>
+
+    <a href="/signup"> Sign Up </a>
+    <a href="/login"> Log In </a>
+
+  <% } %>
