--- a/views/user-views/profile-edit-page.ejs
+++ b/views/user-views/profile-edit-page.ejs
@@ -9,7 +9,7 @@
 <h4> Name: <%= currentUser.fullName %> </h3>
 
 
-  <form method="post" action="/user/<%= userDetails._id %>">
+  <form id="editFrom" method="post" action="/user/<%= userDetails._id %>">
     <h3> Current Avatar </h3>
     <img id="profile-image" src="<%= currentUser.userAvatar %>" />
     <br />
@@ -27,7 +27,7 @@
         value="<%= userDetails.userBio %>"><%= userDetails.userBio %></textarea>
     <br />
 
-    <h5> Current Favorite Languages </h5>
+    <h5> Current Favorite Coding Styles </h5>
     <ul>
       <% userDetails.userFavLanguages.forEach((oneLanguage) => { %>
         <li>
@@ -36,10 +36,10 @@
         <% }) %>
       </ul>
 
-      <h3><em> -- you MUST select your 3 favorite languages or field will be left blank -- </em></h3>
+      <h3><em> -- you MUST select your 3 favorite code styles or field will be left blank -- </em></h3>
 
     <div id="fav-languages-input">
-      <p><strong>Which Languages are your favorite (Select 3)</strong></p>
+      <p><strong>Which Code Styles are your favorite (Select 3)</strong></p>
 
           <input id="CssCheckbox" class="single-checkbox"type="checkbox" name="editFavLanguages" value="CSS" />CSS<br>
 
@@ -47,13 +47,13 @@
 
           <input id="RubyCheckbox" class="single-checkbox" type="checkbox" name="editFavLanguages" value="Ruby" />Ruby<br>
 
-          <input id="ExpressCheckbox" class="single-checkbox" type="checkbox" name="editFavLanguages" />Express<br>
+          <input id="PythonCheckbox" class="single-checkbox" type="checkbox" name="editFavLanguages" value="Python" />Python<br>
 
-          <input id="NodeCheckbox" class="single-checkbox" type="checkbox" name="editFavLanguages" />Node<br>
+          <input id="NodeCheckbox" class="single-checkbox" type="checkbox" name="editFavLanguages" value="Node" />Node<br>
 
-          <input id="MongoCheckbox" class="single-checkbox" type="checkbox" name="editFavLanguages" />Mongo<br>
+          <input id="MongoCheckbox" class="single-checkbox" type="checkbox" name="editFavLanguages" value="Mongo" />Mongo<br>
 
-          <input id="AngularCheckbox" class="single-checkbox" type="checkbox" name="editFavLanguages" />Angular<br>
+          <input id="AngularCheckbox" class="single-checkbox" type="checkbox" name="editFavLanguages" value="Angular" />Angular<br>
 
     </div>
 
