--- a/views/user-views/signup-page.ejs
+++ b/views/user-views/signup-page.ejs
@@ -1,3 +1,4 @@
+
 <h2> Sign Up </h2>
 
 <% if (currentUser) { %>
@@ -41,7 +42,7 @@
   <label for="fav-languages-input"></label>
 
   <div id="fav-languages-input">
-    <p><strong>Which Languages are your favorite (Select 3)</strong></p>
+    <p><strong>Which Coding Styles are your favorite (Select 3)</strong></p>
 
         <input id="CssCheckbox" class="single-checkbox"type="checkbox" name="signupFavLanguages" value="CSS" />CSS<br>
 
@@ -49,13 +50,13 @@
 
         <input id="RubyCheckbox" class="single-checkbox" type="checkbox" name="signupFavLanguages" value="Ruby" />Ruby<br>
 
-        <input id="ExpressCheckbox" class="single-checkbox" type="checkbox" name="signupFavLanguages" />Express<br>
+        <input id="PythonCheckbox" class="single-checkbox" type="checkbox" name="signupFavLanguages" value="Python" />Python<br>
 
-        <input id="NodeCheckbox" class="single-checkbox" type="checkbox" name="signupFavLanguages" />Node<br>
+        <input id="NodeCheckbox" class="single-checkbox" type="checkbox" name="signupFavLanguages" value="Node" />Node<br>
 
-        <input id="MongoCheckbox" class="single-checkbox" type="checkbox" name="signupFavLanguages" />Mongo<br>
+        <input id="MongoCheckbox" class="single-checkbox" type="checkbox" name="signupFavLanguages" value="Mongo" />Mongo<br>
 
-        <input id="AngularCheckbox" class="single-checkbox" type="checkbox" name="signupFavLanguages" />Angular<br>
+        <input id="AngularCheckbox" class="single-checkbox" type="checkbox" name="signupFavLanguages" value="Angular" />Angular<br>
 
   </div>
   <br />
