--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,10 +1,11 @@
 body {
-  padding: 50px;
+  padding: 10px 30px 0 30px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  color: #630;
 }
 
 a {
-  color: #00B7FF;
+  color: #010B7B;
   font-size: 18px;
   padding: 0 3px;
 }
@@ -12,6 +13,16 @@ a {
 img {
   width: 500px;
   height: 100%;
+}
+
+h1 {
+  font-size: 47px;
+  /*padding-left: 300px;*/
+  text-align: center;
+}
+
+h5 {
+  text-decoration: underline;
 }
 
 #form {
@@ -57,6 +68,10 @@ img {
   transition: .3s ease background;
 }
 
+editForm, button, input, textarea {
+  background-color: midnightblue;
+}
+
 .error-message {
   background: #F02B63;
   box-sizing: border-box;
@@ -78,25 +93,26 @@ img {
   width: 200px;
 }
 
-h5 {
-  text-decoration: underline;
+#nav-image {
+  height: 75px;
+  width: 75px;
 }
 
 
 /* Dropdown Button */
 .dropbtn {
-    background-color: #4CAF50;
-    color: white;
+    /*background-color: #4CAF50;*/
+    /*color: white;*/
     padding: 16px;
-    font-size: 16px;
+    /*font-size: 16px;*/
     border: none;
     cursor: pointer;
 }
 
 /* Dropdown button on hover & focus */
-.dropbtn:hover, .dropbtn:focus {
+/*.dropbtn:hover, .dropbtn:focus {
     background-color: #3e8e41;
-}
+}*/
 
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
@@ -127,3 +143,29 @@ h5 {
 
 /* Show the dropdown menu (when the user clicks on the dropdown button) */
 .show {display:block;}
+
+.homepage {
+  background-color: lightgoldenrodyellow;
+  background-image: url("../images/devBackground.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.cssChat {
+  background-image: url("../images/CSS-background.jpg");
+}
+
+.generalBackground {
+  background-image: url("../images/backgroundColorGeneral.jpeg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+#disqus_thread {
+  background-color: white;
+}
+
+.nav-bar {
+  display: flex;
+  justify-content: space-between;
+}
