--- a/views/chat-views/Javascript-page.ejs
+++ b/views/chat-views/Javascript-page.ejs
@@ -1,6 +1,12 @@
-<h2> Javascript Discussion Thread </h2>
-
-
+<div class ="thread-header">
+  <div>
+    <h2> Javascript Discussion Thread </h2>
+  </div>
+  <div>
+    <img class=logos src="../images/javascriptLogo.png" />
+  </div>
+</div>
+<br />
 <div id="disqus_thread"></div>
 <script>
 
