--- a/views/user-views/profile-edit-page.ejs
+++ b/views/user-views/profile-edit-page.ejs
@@ -36,7 +36,7 @@
         <% }) %>
       </ul>
 
-      <h3><em> -- you MUST select your 3 favorite code styles or field will be left blank -- </em></h3>
+      <p><em> -- you MUST select your 3 favorite code styles or field will be left blank -- </em></p>
 
     <div id="fav-languages-input">
       <p><strong>Which Code Styles are your favorite (Select 3)</strong></p>
