--- a/views/chat-views/Ruby-page.ejs
+++ b/views/chat-views/Ruby-page.ejs
@@ -1,4 +1,12 @@
-<h2> Ruby Discussion Thread </h2>
+<div class ="thread-header">
+  <div>
+    <h2> Ruby Discussion Thread </h2>
+  </div>
+  <div>
+    <img class=logos src="../images/rubyLogo.png" />
+  </div>
+</div>
+<br />
 
 
 <div id="disqus_thread"></div>
