--- a/views/chat-views/CSS-page.ejs
+++ b/views/chat-views/CSS-page.ejs
@@ -8,6 +8,9 @@
 </div>
 <br />
 
+
+<div>
+
 <div id="disqus_thread"></div>
 <script>
 
@@ -28,3 +31,16 @@ s.setAttribute('data-timestamp', +new Date());
 })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+
+<div>
+  <ul>
+    <li>
+      currentUser
+    </li>
+  </ul>
+</div>
+
+
+
+
+</div>
