--- a/views/code-views/code-list.ejs
+++ b/views/code-views/code-list.ejs
@@ -6,10 +6,9 @@
   <% listOfCodes.forEach((oneCode) => { %>
     <li>
       <h3> Code Name: <%= oneCode.codeName %> </h3>
-      <h4> Author: <%= oneCode.codeAuthor %> </h4>
-      <h4> Language: <%= oneCode.codeLanguage %> </h5>
-      <p> description: <%= oneCode.codeDescription %> </p>
-      <a href="<%= oneCode.codeLink %>"> View Code </a>
+
+      <a href="/code/<%= oneCode._id %>"> Code Details </a>
+      <br
     </li>
   <% }) %>
 </ul>
