--- a/views/chat-views/CSS-page.ejs
+++ b/views/chat-views/CSS-page.ejs
@@ -34,9 +34,12 @@ s.setAttribute('data-timestamp', +new Date());
 
 <div>
   <ul>
+    Who's online?
     <li>
-      currentUser
+      <%= currentUser.userName %>
+
     </li>
+
   </ul>
 </div>
 
