--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,14 +1,20 @@
 body {
   padding: 10px 30px 0 30px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  color: #720;
-  width: 100%
+  color: azure;
+  width: 100vw;
+  height: 100vh;
+  background-color: #005371;
 }
 
 a {
   color: #010B7B;
   font-size: 18px;
   padding: 0 3px;
+}
+
+a:hover {
+  color: #d0d0d0;
 }
 
 img {
@@ -131,7 +137,7 @@ p {
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
+    background-color: #46B3B7;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
@@ -170,7 +176,8 @@ p {
 
 #disqus_thread {
   background-color: gainsboro;
-  width: 75%;
+  width: 85%;
+  box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
 }
 
 .nav-bar {
@@ -215,5 +222,16 @@ p {
 }
 
 .user-list {
-  width: 15%;
+  width: 10%;
+  background-color: gainsboro;
+  height: 400px;
+  box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
+  color: #000;
+}
+
+.discussion-page {
+  background: linear-gradient(#00547C, #088397, #3FACB4, #64CFC8);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100%;
 }
