--- a/views/user-views/login-page.ejs
+++ b/views/user-views/login-page.ejs
@@ -22,6 +22,7 @@
   <label for="email-input"> Email </label>
   <input id="email-input" type="email" placeholder="e.g. tyrion@casterly.rock" name="LoginEmail" />
   <br />
+  <br />
 
   <label for="password-input"> Password </label>
   <input id="passwrod-input" type="password" name="LoginPassword" />
@@ -32,9 +33,12 @@
   <br />
   <br />
 
-  <a href="/facebook/login"> Log In With Facebook </a>
-  <a href="/google/login"> Log In With Google </a>
-  <br />
+
+  <div class="login-logo-div">
+    <a href="/facebook/login"> <img class="login-logo" src="../images/facebookLogo.png" /> </a>
+    <a href="/google/login"> <img class="login-logo" src="../images/googleLogo.png" /> </a>
+    <br />
+  </div>
   <br />
   <p>
     Don't have an account?
