--- a/views/user-views/signup-page.ejs
+++ b/views/user-views/signup-page.ejs
@@ -70,9 +70,15 @@
   <button> Submit </button>
   <br />
   <br />
+  <br />
 
-  <a href="/facebook/login"> Sign Up With Facebook </a>
-  <a href="/google/login"> Sign Up With Google </a>
+  <div class="login-logo-div">
+    <a href="/facebook/login"> <img class="login-logo" src="../images/facebookLogo.png" /> </a>
+    <a href="/google/login"> <img class="login-logo" src="../images/googleLogo.png" /> </a>
+    <br />
+  </div>
+
+  <br />
 
   <p>
     Already have an account?
